# sdgen

./: .gitignore  LICENSE  MANIFEST.in  README.md  cu.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
src/sdgen/: __init__.py  cpp_adapter.py  cs_adapter.py  go_adapter.py  java_adapter.py  language_adapter.py  model.py  rust_adapter.py  swift_adapter.py  utils.py
tests/: test_json.py  test_language_adapter.py  test_sdgenint.py  test_xml.py  test_xsd.py  test_yaml.py
tests-cpp-gen/cpp_codegen/: test_cpp_codegen.py
tests-cpp-gen/cpp_serialization/: test_cpp_serialization.py
tests-cs-gen/cs_codegen/: test_cs_codegen.py
tests-cs-gen/cs_serialization/: expected_output.txt  test_cs_serialization.py
tests-gen/cpp_codegen/: test_cpp_codegen.py
tests-go-gen/go_codegen/: test_go_codegen.py
tests-go-gen/go_serialization/: expected_output.txt  test_go_serialization.py
tests-java-gen/: pom.xml
tests-java-gen/java_codegen/: expected_output.txt  test_java_codegen.py
tests-java-gen/java_serialization/: expected_output.txt  test_java_serialization.py
tests-rs-gen/rust_codegen/: expected_output.txt  test_rust_codegen.py
tests-rs-gen/rust_serialization/: expected_output.txt  test_rust_serialization.py
tests-swift-gen/: Package.swift
tests-swift-gen/swift_codegen/: test_swift_codegen.py
tests-swift-gen/swift_serialization/: expected_output.txt  test_swift_serialization.py
